--- a/app/src/main/res/layout/fragment_details_produit.xml
+++ b/app/src/main/res/layout/fragment_details_produit.xml
@@ -52,7 +52,8 @@
                         android:layout_marginTop="@dimen/_10sdp"
                         android:layout_weight="1"
                         android:text="@string/strNom"
-                        android:textSize="@dimen/_15sdp" />
+                        android:textSize="@dimen/_15sdp"
+                        android:textColor="@color/white"/>
 
                     <TextView
                         android:id="@+id/txtTitreProduit"
@@ -60,7 +61,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_10sdp"
                         android:layout_weight="1"
-                        android:textSize="@dimen/_15sdp" />
+                        android:textSize="@dimen/_15sdp"
+                        android:textColor="@color/white"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -73,7 +75,8 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="@string/categorie"
-                        android:textSize="@dimen/_15sdp" />
+                        android:textSize="@dimen/_15sdp"
+                        android:textColor="@color/white"/>
 
                     <TextView
                         android:id="@+id/txtCategorieProduit"
@@ -81,7 +84,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_10sdp"
                         android:layout_weight="1"
-                        android:textSize="@dimen/_15sdp" />
+                        android:textSize="@dimen/_15sdp"
+                        android:textColor="@color/white"/>
                 </LinearLayout>
 
                 <LinearLayout
@@ -94,7 +98,8 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="@string/prix"
-                        android:textSize="@dimen/_15sdp" />
+                        android:textSize="@dimen/_15sdp"
+                        android:textColor="@color/white"/>
 
                     <TextView
                         android:id="@+id/txtPrixProduit"
@@ -102,7 +107,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_10sdp"
                         android:layout_weight="1"
-                        android:textSize="@dimen/_15sdp" />
+                        android:textSize="@dimen/_15sdp"
+                        android:textColor="@color/white"/>
 
                 </LinearLayout>
 
@@ -116,7 +122,8 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="@string/description"
-                        android:textSize="@dimen/_15sdp" />
+                        android:textSize="@dimen/_15sdp"
+                        android:textColor="@color/white" />
 
                     <TextView
                         android:id="@+id/txtDescriptionProduit"
@@ -124,7 +131,8 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/_10sdp"
                         android:layout_weight="1"
-                        android:textSize="@dimen/_15sdp" />
+                        android:textSize="@dimen/_15sdp"
+                        android:textColor="@color/white"/>
                 </LinearLayout>
             </LinearLayout>
         </ScrollView>
@@ -151,7 +159,8 @@
                     android:layout_weight="0"
                     android:ems="10"
                     android:text="@={viewModel.quantiteProduit}"
-                    android:inputType="number"/>
+                    android:inputType="number"
+                    android:textColor="@color/white"/>
 
 <!--                <TextView-->
 <!--                    android:id="@+id/idTxtPrixTotal"-->
